[FIX] header width and leftover scrollbar in form views by moving the whole layout to tables, and removing .item from non-TinyInputWidget widgets

--- a/addons/openerp/static/css/menu.css
+++ b/addons/openerp/static/css/menu.css
@@ -55,8 +55,6 @@
     right: 0;
     height: 30px;
     line-height: 1.2;
-
-    background: url(../images/top-bg-b.gif) scroll repeat-x top transparent;
 }
 
 #shortcuts ul {
